# profile-app

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  Rocket.toml  build.rs  compose.services.yml  compose.yml  deploy.sh  example.env
assets/: contact.json
client/: .env  package-lock.json  package.json
client/public/: index.html  manifest.json
client/src/: App.tsx  AppFooter.tsx  index.css  index.scss  index.tsx
client/src/common/: details.ts  download.ts  link.tsx  theme.ts  user.ts  view.ts
client/src/components/: ContactCard.tsx  Linked.tsx  RepoCard.tsx  Wrap.tsx
client/src/models/: github.ts
client/src/views/: About.tsx  Contact.tsx  Home.tsx
core/: main.rs
data/: contact.json  faq.json
nginx/: Dockerfile  nginx.conf
proxy/: nginx.conf
server/: config.rs  main.rs  models.rs  public.rs  responders.rs
server/responders/: download.rs  mod.rs
server/routes/: github.rs  index.rs  mod.rs
