[package]
name    = "profile-app"
version = "0.1.0"
edition = "2021"
build   = "build.rs"

[[bin]]
name    = "server"
path    = "server/main.rs"

[dependencies]
anyhow = "1.0.86"
dotenv = "0.15.0"
log = "0.4.22"
octocrab = "0.38.0"
rocket = { version = "0.5.1", features = ["json", "serde_json"] }
serde = "1.0.204"

[build-dependencies]
copy_dir = "0.1.3"

[dev-dependencies]
dotenv = "0.15.0"
flexi_logger = "0.28.4"
tokio = "1.38.0"
